--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -1,4 +1,4 @@
-tool_name=JWT Editor
+tool_name=JWT Editor FAL
 burp_keys_tab=JWT Editor Keys
 burp_editor_tab=JSON Web Token
 burp_proxy_comment = %d JWTs, %d JWEs
@@ -40,6 +40,7 @@ editor = Editor
 editor_view_label_jwt = JWT
 editor_view_label_serialized_jwt = Serialized JWT
 editor_view_button_attack_embed_jwk=Embedded JWK
+editor_view_button_attack_null_kid="/dev/null" kid
 editor_view_button_attack_sign_none="none" Signing Algorithm
 editor_view_button_attack_key_confusion=HMAC Key Confusion
 editor_view_message_title_verification=JWS Verification
