First stab at jku

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -40,9 +40,10 @@ editor = Editor
 editor_view_label_jwt = JWT
 editor_view_label_serialized_jwt = Serialized JWT
 editor_view_button_attack_embed_jwk=Embedded JWK
-editor_view_button_attack_null_kid="/dev/null" kid
 editor_view_button_attack_sign_none="none" Signing Algorithm
 editor_view_button_attack_key_confusion=HMAC Key Confusion
+editor_view_button_attack_null_kid="/dev/null" kid
+editor_view_button_attack_inject_jku=Inject jku
 editor_view_message_title_verification=JWS Verification
 editor_view_message_verified= JWS verified OK
 editor_view_message_not_verified = Unable to verify JWS with provided keys
